Issue #180 Бага с g-frame при наличии фильтра Moving overflow

--- a/desktop.blocks/g-frame/g-frame.css
+++ b/desktop.blocks/g-frame/g-frame.css
@@ -1,6 +1,5 @@
 .g-frame {
     position: relative;
-    overflow: hidden;
     display: none;
     width: 850px;
     border-style: solid;
